# rotary-horizontal-tail-control

./: CMakeLists.txt  README.md
src/: Aircraft.cpp  Aircraft.h  Controllers.cpp  Controllers.h  Dynamics.cpp  Dynamics.h  ModalAnalysis.py  Plotting.py  Utils.cpp  Utils.h  main.cpp
